@@ -10,6 +10,8 @@ dpkg (1.18.1) UNRELEASED; urgency=low
   * Set the SE Linux file context even when the file mode has no file type.
   * Make dpkg-buildpackage -j override any parallel option specified in
     DEB_BUILD_OPTIONS. Regression introduced in dpkg 1.14.15.
+  * Honor Pre-Depends, Conflicts and Breaks for packages in unpacked and
+    half states. Thanks to Ian Jackson <iwj@ubuntu.com>. Closes: #377860
   * Perl modules:
     - Add missing strict and warnings pragmas for submodules.
     - Use non-destructive substitutions inside map.
